--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
+    "mongodb": "^2.1.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
