--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "quick-poll",
+  "name": "quick-poll-2",
   "version": "1.0.0",
-  "description": "A quick way to gather opinions",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Solms Dykman",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.2",
-    "cookie-parser": "^1.4.0",
-    "ejs": "^2.3.4",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
-    "express-session": "^1.12.1",
-    "jquery": "^2.2.0",
-    "jsdom": "^7.2.2",
-    "mongodb": "^2.1.3",
+    "express-session": "^1.13.0",
+    "mongoose": "^4.3.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
