--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Solms Dykman",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.4.8",
+    "angular-clipboard": "^1.3.0",
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
